<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/start_background"
    tools:context="com.example.akash.sharehouse.login">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:src="@drawable/app_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_title"
            android:textColor="@color/start_text"
            android:textSize="40sp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />


        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_name"
            android:textColor="@color/start_text"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="210sp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:bottomLeftRadius="15dp"
            android:bottomRightRadius="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_label"
            app:layout_constraintTop_toBottomOf="@+id/app_title" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_password"
            android:textColor="@color/start_text"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/login_label"
            app:layout_constraintTop_toBottomOf="@+id/login_label" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="210dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:bottomLeftRadius="15dp"
            android:bottomRightRadius="15dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/username_input"
            app:layout_constraintTop_toBottomOf="@+id/username_input" />

        <CheckBox
            android:id="@+id/save_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="#0099BB"
            android:text="@string/checkboxtext"
            android:textColor="@color/start_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/login_label"
            app:layout_constraintTop_toBottomOf="@+id/password_label" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_checkbox" />

        <Button
            android:id="@+id/newuser_button"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:text="@string/newuser_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintTop_toTopOf="@+id/login_button" />

        <TextView
            android:id="@+id/forgotpassword_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/forgotpassword_link"
            android:textColor="@color/start_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />


</android.support.constraint.ConstraintLayout>
